tmux: copypasta'd someone's cat | grep faux pas :-)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,7 +113,7 @@ bind-key / command-prompt -p "Man:" "split-window -h 'exec man %%'"
 bind-key S command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
 
 # present a menu of URLs to open from the visible pane. sweet.
-bind-key U capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 "cat /tmp/tmux-buffer | urlview"
+bind-key U capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 "urlview /tmp/tmux-buffer"
 
 # Session initialization
 
