hg: update attic extension with a maintained fork

--- a/.hgrc
+++ b/.hgrc
@@ -41,7 +41,7 @@ hgext.record =
 hgext.transplant =
 hgext.zeroconf =
 #hgshelve = ~/.hglib/hgshelve/hgshelve.py
-hgattic = ~/.hglib/hgattic/attic.py
+hgattic = ~/.hglib/hgattic/hgattic.py
 prompt = ~/.hglib/hg-prompt/prompt.py
 histedit = ~/.hglib/histedit/hg_histedit.py
 qct=/usr/local/lib/hg/qct.py
