Update tmux session for host kodama

--- a/.tmux/kodama.conf
+++ b/.tmux/kodama.conf
@@ -1,5 +1,8 @@
 new-session -d -s main -n tunes 'ncmpcpp'
-new-window -d -n home
+new-window -d -n openstack 'cd ~/src/ruby/openstack-chef; exec $SHELL'
+new-window -d -n chef 'cd ~/src/ruby/chef-box; exec $SHELL'
+split-window -h -t1 'cd ~/src/ruby/openstack-chef; exec $SHELL'
+split-window -h -t2 'cd ~/src/ruby/chef-box; exec $SHELL'
 
 # get rid of the placeholder
 switch-client -t main
