--- a/.hgrc
+++ b/.hgrc
@@ -18,8 +18,8 @@ pygments_style = manni
 cacerts = /usr/local/etc/hg/ca-roots.pem
 
 [diff]
-# so mq can handle add/remove/move, symlinks, lots of other stuff
-git = 1
+# copy/rename support, permission bits, etc. See `hg help diffs`
+git = True
 
 [extensions]
 hgext.bookmarks =
@@ -87,7 +87,11 @@ filemerge.gui=True
 
 [pager]
 pager = LESS='FRX' less
-attend = help, log, glog, status, qstatus, incoming, outgoing, diff, qdiff, cat, annotate, unshelve, last, show
+attend = help, log, glog, lg, status, qstatus, incoming, outgoing, diff, qdiff, cat, annotate, unshelve, last, show
+
+[mq]
+# Use the secret phase for mq changesets -- see `hg help phases`
+secret = True
 
 [hgk]
 path=~/bin/hgk
