tmux: less obnoxious current window bg color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ set -g status-fg white
 set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %Y-%m-%d %H:%M#[default]"
 set -g status-left-length 35
 set -g status-justify centre
-setw -g window-status-current-bg red
+setw -g window-status-current-bg colour98
 set -g status-right "#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
 
 # try to set wm window titles with xterm codes
