tmux: add a new app work session to tmux startup

--- a/.tmux/lupin.conf
+++ b/.tmux/lupin.conf
@@ -14,6 +14,14 @@ new-window -d -n rails
 split-window -v -t2
 split-window -h -t rails.top
 
+new-session -d -s dashboard.io
+set -t dashboard.io default-path "/Users/ches/src/work/500startups/Admin500"
+link-window -dk -t0 -s main:0
+new-window -d -n vim 'exec $VIM .'
+new-window -d -n rails
+split-window -v -t2
+split-window -h -t rails.top
+
 # get rid of the placeholder
 switch-client -t main
 kill-session -t throwaway
