--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,11 +41,17 @@ set -g bell-action any
 # purdy status bar
 set -g status-bg colour236
 set -g status-fg white
-set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %Y-%m-%d %H:%M#[default]"
+set -g status-left "#[fg=green][#[fg=cyan]#S#[fg=green]]#[fg=colour250] %a %m/%d %H:%M#[default]"
 set -g status-left-length 35
 set -g status-justify centre
 setw -g window-status-current-bg colour98
+setw -g window-status-current-format '#[fg=black,bg=yellow] #I #[fg=white,bg=colour98] #W #F '
+setw -g window-status-current-attr bold
 set -g status-right "#H #[fg=cyan][#(uptime|cut -d ' ' -f 12-)]#[default]"
+
+# set -g message-attr bold
+# set -g message-fg black
+# set -g message-bg yellow
 
 # try to set wm window titles with xterm codes
 set -g set-titles on
@@ -124,6 +130,9 @@ new-session -d -s throwaway
 # with tmux's current config capabilities
 if '[ `hostname -s` = lupin ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/lupin.conf'
 if '[ `hostname -s` = kodama ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/kodama.conf'
+
+# Migrating new active machine
+if '[ `hostname -s` = Fio ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/lupin.conf'
 
 # switch-client -t main
 # select-window -t main:0
