git: Nifty aliases for temporary ignore with assume-unchanged

--- a/.gitconfig
+++ b/.gitconfig
@@ -30,6 +30,9 @@
 	add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; git add `f`"
 	up = !sh -c 'git pull && git log --pretty=format:"%Cred%ae %Creset- %C(yellow)%s %Creset(%ar)" HEAD@{1}..'
 	ctags = !.git/hooks/ctags
+	ignore = update-index --assume-unchanged
+	unignore = update-index --no-assume-unchanged
+	ignored = !git ls-files -v | grep \"^[[:lower:]]\"
 [merge]
 	summary = true
 	tool = kdiff3
