--- a/.tmux/lupin.conf
+++ b/.tmux/lupin.conf
@@ -1,3 +1,6 @@
+# NOTE: MacVim only supports being a server in GUI mode, so I can't use
+# session.vim's nice support for `--servername foo` to open a session :-(
+# :h macvim-clientserver
 VIM=/Applications/MacVim.app/Contents/MacOS/Vim
 
 # first session
@@ -5,22 +8,10 @@ new-session -d -s main -n tunes 'ncmpcpp'
 new-window -d -n irssi 'irssi'
 new-window -d -n home
 
-# second session
-new-session -d -s noted-life
-set -t noted-life default-path "$HOME/src/work/andrew_hurd/noted_life"
-link-window -dk -t1 -s main:1
-new-window -d -n vim 'exec $VIM .'
-new-window -d -n rails
-split-window -v -t3
-split-window -h -t rails.top
-
-new-session -d -s dashboard.io
-set -t dashboard.io default-path "/Users/ches/src/work/500startups/Admin500"
-link-window -dk -t1 -s main:1
-new-window -d -n vim 'exec $VIM .'
-new-window -d -n rails
-split-window -v -t3
-split-window -h -t rails.top
+source-file $HOME/.tmux/sessions/dashboardio.conf
+source-file $HOME/.tmux/sessions/dashboardpro.conf
+source-file $HOME/.tmux/sessions/siphon.conf
+source-file $HOME/.tmux/sessions/activeavro.conf
 
 # get rid of the placeholder
 switch-client -t main
