tmux: Bindings for session switch by name, tee pane output to file

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ setw -g mode-mouse on
 set-option -g status-keys emacs
 
 # scrollback buffer n lines
-set -g history-limit 5000
+set -g history-limit 6000
 
 # bells and monitoring
 set -g visual-activity on
@@ -78,6 +78,7 @@ set -g display-time 2000
 # train myself on some tmux defaults that I like better than screen's
 
 # reload settings
+# TODO: idempotent session creations; bind key to load sessions
 bind-key R source-file ~/.tmux.conf; display-message "tmux config reloaded"
 
 # toggle previous window like screen, although prefix-l will
@@ -100,16 +101,17 @@ bind-key K confirm kill-window
 bind-key X confirm kill-server
 
 bind-key m setw monitor-activity
-bind-key M command-prompt -p "interval (s)" "setw monitor-silence %%"
+bind-key M command-prompt -p "monitor silence: interval (s)" "setw monitor-silence %%"
 
 # name window
-# unbind ,
+unbind ,
 bind-key A command-prompt -I "#W" "rename-window %%"
 
 # Keys to switch session.
 bind-key Q switchc -t0
 bind-key W switchc -t1
 bind-key E switchc -t2
+bind-key , command-prompt -p "switch to session" "switch-client -t '%%'"
 
 # Make copy mode more vim-like.
 bind -t vi-copy v begin-selection
@@ -126,6 +128,9 @@ bind - split-window -v
 # whizbang custom keybindings
 bind-key / command-prompt -p "Man:" "split-window -h 'exec man %%'"
 bind-key S command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
+
+# Toggle piping output from a pane to file
+bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#t.out'
 
 # present a menu of URLs to open from the visible pane. sweet.
 bind-key U capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 "urlview /tmp/tmux-buffer"
