Global gitignores for .pryrc, .lvimrc

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,18 @@
 .agignore
 .git-wtfrc
 .idea
+.lvimrc
 .project
 .pydevproject
 .ropeproject
 .tm_properties
 .tmtags
 .DS_Store
+.bundle/
 Gemfile.lock
+.pryrc
 .rvmrc
 .ruby-version
 .ruby-gemset
 /tags
+
