hg: semantic fix for "show last" alias
`hg log --limit 1` is basically equivalent to `hg log tip` -- tip is the
newest revision, not necessarily the current one, e.g. if you've checked
out an older rev. `git show` with no explicit revision argument acts on
the *current* rev, so my `last` alias for hg should more appropriately
use `--rev .`

--- a/.hgrc
+++ b/.hgrc
@@ -56,9 +56,9 @@ qclear = qrefresh -X re:.
 untrack = rm -Af
 # parity with my git mappings
 df = diff
-lg = log -p
-last = log -l1 -p
-show = log -pr
+lg = log --patch
+show = log --patch --rev
+last = show .
 
 [bookmarks]
 # More git-like behavior: only update the bookmark you are currently using,
