tmux: Config changes required by 1.9
Mainly, the default-path option has gone away, instead working directory
can be set for an entire session with `new-session -c`. See:

http://sourceforge.net/p/tmux/tmux-code/ci/282c5f9644ed262ee15efbd3d072f7acc577da15/

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,6 +70,9 @@ set-window-option -g pane-base-index 1
 set -g display-panes-time 2000
 set -g display-time 2000
 
+# If we want Vim to be told about focus: http://git.io/2UqSgQ
+set -g focus-events on
+
 ###########################################################################
 #                    Key Bindings - Screen and Vim-ish                    #
 ###########################################################################
@@ -135,7 +138,9 @@ bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#t.out'
 # present a menu of URLs to open from the visible pane. sweet.
 bind-key U capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 "urlview /tmp/tmux-buffer"
 
-# Session initialization
+#######################################################################
+#                       Session Initialization                        #
+#######################################################################
 
 # need a default session despite the conditionals below
 new-session -d -s throwaway
@@ -144,9 +149,7 @@ new-session -d -s throwaway
 # with tmux's current config capabilities
 if '[ `hostname -s` = lupin ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/lupin.conf'
 if '[ `hostname -s` = kodama ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/kodama.conf'
-
-# Migrating new active machine
-if '[ `hostname -s` = Fio ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/lupin.conf'
+if '[ `hostname -s` = Fio ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/fio.conf'
 
 # switch-client -t main
 # select-window -t main:0
