--- a/.hgrc
+++ b/.hgrc
@@ -53,6 +53,7 @@ nlog = log --style ~/.hglib/styles/map-cmdline.nlog
 slog = log --style ~/.hglib/styles/map-cmdline.slog
 sglog = glog --style ~/.hglib/styles/map-cmdline.sglog
 vlog = nlog -v
+vlg = nlog -vp
 
 gitlog = log --style ~/.hglib/styles/git.style
 
@@ -104,7 +105,7 @@ filemerge.gui=True
 pager = LESS='FRX' less
 attend = help, status, qstatus, incoming, outgoing, diff, df, qdiff,
          cat, annotate, shelve, shelf, last, show,
-         log, glog, lg, ll, gitlog, nlog, slog, sglog, vlog
+         log, glog, lg, ll, gitlog, nlog, slog, sglog, vlog, vlg
 
 [mq]
 # Use the secret phase for mq changesets -- see `hg help phases`
