tmux: OS X conditionals, mouse, some new mappings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,11 @@
 ###########################################################################
 
 # Use the OS X pasteboard hack if available
-if 'command -v reattach-to-user-namespace >/dev/null' 'set -g default-command "reattach-to-user-namespace -l bash"'
+if 'command -v reattach-to-user-namespace >/dev/null' \
+    'set -gq @osx-pasteboard true'
+
+if 'tmux show -gv @osx-clipboard' \
+    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 # tmux is supposed to figure out 256-color support from terminfo and set this,
 # but it seems to fail anyway. Kind of sucks for when I run Terminal.app...
@@ -32,7 +36,7 @@ setw -g mode-mouse on
 set-option -g status-keys emacs
 
 # scrollback buffer n lines
-set -g history-limit 6000
+set -g history-limit 12000
 
 # bells and monitoring
 set -g visual-activity on
@@ -73,6 +77,11 @@ set -g display-time 2000
 # If we want Vim to be told about focus: http://git.io/2UqSgQ
 set -g focus-events on
 
+# I don't mouse much, but you'd just expect this stuff to work
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
 ###########################################################################
 #                    Key Bindings - Screen and Vim-ish                    #
 ###########################################################################
@@ -81,7 +90,7 @@ set -g focus-events on
 # train myself on some tmux defaults that I like better than screen's
 
 # reload settings
-# TODO: idempotent session creations; bind key to load sessions
+# TODO: bind key to load sessions?
 bind-key R source-file ~/.tmux.conf; display-message "tmux config reloaded"
 
 # toggle previous window like screen, although prefix-l will
@@ -97,6 +106,10 @@ bind-key -r < resize-pane -L 3
 bind-key -r > resize-pane -R 3
 bind-key -r J swap-pane -D
 bind-key -r K swap-pane -U
+
+# TODO: Of COURSE the keycodes aren't working properly...
+bind-key -r S-Left swap-window -t -1
+bind-key -r S-Right swap-window -t +1
 
 # remap kill window, add confirm map before killing server
 unbind &
@@ -120,7 +133,12 @@ bind-key , command-prompt -p "switch to session" "switch-client -t '%%'"
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind -t vi-copy C-v rectangle-toggle
-bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+# Copy top of tmux paste buffer stack to OS clipboard.
+# Alternatively, this will always immediately copy to system pasteboard:
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+if 'tmux show -gv @osx-clipboard' \
+    'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
 # I'll give these mnemonic split bindings a try
 # unbind %
@@ -128,29 +146,42 @@ bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind | split-window -h
 bind - split-window -v
 
+# I like to quickly pop open a short shell from fullscreen apps like vim, IRC
+# TODO: make this check for an existing one and un-zoom+focus it if present
+bind _ split-window -l 10
+
+# "hide", return to last pane and zoom it. Compliments the above _
+bind h select-pane -l \; resize-pane -Z
+
 # whizbang custom keybindings
-bind-key / command-prompt -p "Man:" "split-window -h 'exec man %%'"
-bind-key S command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
+bind-key F1 command-prompt -p "Man:" "split-window -h 'exec man %%'"
+bind-key @ command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
+bind-key / copy-mode \; send-keys ?
 
 # Toggle piping output from a pane to file
 bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#t.out'
 
 # present a menu of URLs to open from the visible pane. sweet.
-bind-key U capture-pane \; save-buffer /tmp/tmux-buffer \; split-window -l 10 "urlview /tmp/tmux-buffer"
+bind-key U capture-pane \;\
+    save-buffer /tmp/tmux-buffer \;\
+    split-window -l 10 "urlview /tmp/tmux-buffer"
 
 #######################################################################
 #                       Session Initialization                        #
 #######################################################################
 
 # need a default session despite the conditionals below
-new-session -d -s throwaway
+new-session -d -s default
 
-# this is the best way I can find to manage host-conditional sessions
-# with tmux's current config capabilities
-if '[ `hostname -s` = lupin ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/lupin.conf'
-if '[ `hostname -s` = kodama ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/kodama.conf'
-if '[ `hostname -s` = Fio ] && ! tmux has-session -t main' 'source-file $HOME/.tmux/fio.conf'
+# Default session setups for certain hosts
+if '[ `hostname -s` = lupin ] && ! tmux has-session -t main' \
+    'source-file $HOME/.tmux/lupin.conf'
+if '[ `hostname -s` = kodama ] && ! tmux has-session -t main' \
+    'source-file $HOME/.tmux/kodama.conf'
+if '[ `hostname -s` = Fio ] && ! tmux has-session -t main' \
+    'source-file $HOME/.tmux/fio.conf'
 
-# switch-client -t main
-# select-window -t main:0
+# If we started one of the preconfigured sessions, use it and kill the default
+if 'tmux has-session -t main && tmux has-session -t default' \
+    'switch-client -t main; kill-session -t default'
 
