tmux: Fix broken user option reference for OS X pasteboard hacks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@
 if 'command -v reattach-to-user-namespace >/dev/null' \
     'set -gq @osx-pasteboard true'
 
-if 'tmux show -gv @osx-clipboard' \
+if 'tmux show -gv @osx-pasteboard' \
     'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 
 # tmux is supposed to figure out 256-color support from terminfo and set this,
@@ -137,7 +137,7 @@ bind -t vi-copy C-v rectangle-toggle
 # Copy top of tmux paste buffer stack to OS clipboard.
 # Alternatively, this will always immediately copy to system pasteboard:
 # bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-if 'tmux show -gv @osx-clipboard' \
+if 'tmux show -gv @osx-pasteboard' \
     'bind y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
 
 # I'll give these mnemonic split bindings a try
