tmux: Add binding for quick new session creation

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -127,7 +127,8 @@ bind-key A command-prompt -I "#W" "rename-window %%"
 bind-key Q switchc -t0
 bind-key W switchc -t1
 bind-key E switchc -t2
-bind-key , command-prompt -p "switch to session" "switch-client -t '%%'"
+bind-key , command-prompt -p "switch to session:" "switch-client -t '%%'"
+bind-key C command-prompt -p "create session named:" "new-session -s %%"
 
 # Make copy mode more vim-like.
 bind -t vi-copy v begin-selection
