tmux: Fix a mapping conflict
K was overriding another custom mapping. Q, W, and E were basically
useless because I always give names to sessions.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -113,7 +113,7 @@ bind-key -r S-Right swap-window -t +1
 
 # remap kill window, add confirm map before killing server
 unbind &
-bind-key K confirm kill-window
+bind-key Q confirm kill-window
 bind-key X confirm kill-server
 
 bind-key m setw monitor-activity
@@ -123,10 +123,8 @@ bind-key M command-prompt -p "monitor silence: interval (s)" "setw monitor-silen
 unbind ,
 bind-key A command-prompt -I "#W" "rename-window %%"
 
-# Keys to switch session.
-bind-key Q switchc -t0
-bind-key W switchc -t1
-bind-key E switchc -t2
+# Session switching. "H" for "home", comma will accept a prefix string
+bind-key H switchc -t main
 bind-key , command-prompt -p "switch to session:" "switch-client -t '%%'"
 bind-key C command-prompt -p "create session named:" "new-session -s %%"
 
@@ -160,7 +158,7 @@ bind-key @ command-prompt -p "SSH:" "new-window -n %1 'ssh %1'"
 bind-key / copy-mode \; send-keys ?
 
 # Toggle piping output from a pane to file
-bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#t.out'
+bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#T.out'
 
 # present a menu of URLs to open from the visible pane. sweet.
 bind-key U capture-pane \;\
