tmux: Clean up a no-longer-needed variable for sessions
Using Homebrew's MacVim installation consistently across all my Macs
now, so no need for the parameterization. It was creating an environment
variable in tmux shells that mucks with neovim's VIMRUNTIME.

--- a/.tmux/lupin.conf
+++ b/.tmux/lupin.conf
@@ -1,13 +1,9 @@
-# NOTE: MacVim only supports being a server in GUI mode, so I can't use
-# session.vim's nice support for `--servername foo` to open a session :-(
-# :h macvim-clientserver
-VIM=/Applications/MacVim.app/Contents/MacOS/Vim
-
 # first session
 new-session -d -s main -n tunes 'ncmpcpp'
 new-window -d -n irssi 'irssi'
 new-window -d -n home
 
+# project sessions
 source-file $HOME/.tmux/sessions/dashboardio.conf
 source-file $HOME/.tmux/sessions/dashboardpro.conf
 source-file $HOME/.tmux/sessions/siphon.conf
