--- a/.tmux/fio.conf
+++ b/.tmux/fio.conf
@@ -1,12 +1,8 @@
-# NOTE: MacVim only supports being a server in GUI mode, so I can't use
-# session.vim's nice support for `--servername foo` to open a session :-(
-# :h macvim-clientserver
-VIM=/usr/local/bin/vim
-
 # first session
 new-session -d -s main -n tunes 'ncmpcpp'
 new-window -d -n irssi 'irssi'
 new-window -d -n home
 
+# project sessions
 source-file $HOME/.tmux/sessions/activeavro.conf
 
