[tmux] Adapt mouse settings to new 2.1 style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,8 @@ set-option -sg escape-time 0
 
 # in copy mode, use vi bindings and make the mouse work
 setw -g mode-keys vi
-setw -g mode-mouse on
+setw -g mouse on
+setw -g mouse-utf8 on
 
 # Ctrl-p/n for tmux command history -- the vi mode is more like shell vi mode
 # than vi command mode
@@ -77,11 +78,6 @@ set -g display-time 2000
 # If we want Vim to be told about focus: http://git.io/2UqSgQ
 set -g focus-events on
 
-# I don't mouse much, but you'd just expect this stuff to work
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
 ###########################################################################
 #                    Key Bindings - Screen and Vim-ish                    #
 ###########################################################################
@@ -91,7 +87,7 @@ set -g mouse-select-window on
 
 # reload settings
 # TODO: bind key to load sessions?
-bind-key R source-file ~/.tmux.conf; display-message "tmux config reloaded"
+bind-key R source-file ~/.tmux.conf \; display-message "tmux config reloaded"
 
 # toggle previous window like screen, although prefix-l will
 # be easy to get used to
@@ -164,6 +160,13 @@ bind-key C-p pipe-pane -o 'cat >> ~/.tmux/logs/#S-#W-#T.out'
 bind-key U capture-pane \;\
     save-buffer /tmp/tmux-buffer \;\
     split-window -l 10 "urlview /tmp/tmux-buffer"
+
+# This ugliness makes mouse scrolling a pane "Just Work" the way it did before
+# tmux 2.1. This will probably be a default mapping in the next version:
+# https://github.com/tmux/tmux/issues/145
+bind -n WheelUpPane select-pane -t = \;\
+    if -t = -F "#{mouse_any_flag}" "send-keys -M" \
+        "if -t = -F '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 #######################################################################
 #                       Session Initialization                        #
