tmux: sidestep config setting removed in recent versions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,8 @@ set -g history-limit 12000
 
 # bells and monitoring
 set -g visual-activity on
-set -g visual-content on
+# This was removed -- what happened to it?
+# set -g visual-content on
 set -g visual-silence on
 set -g visual-bell on
 set -g bell-action any
