--- a/.tmux/fio.conf
+++ b/.tmux/fio.conf
@@ -2,7 +2,10 @@
 new-session -d -s main -n tunes 'ncmpcpp'
 new-window -d -n irssi 'irssi'
 new-window -d -n home
+new-window -d -n wiki 'exec vim -c "OpenSession default"'
 
 # project sessions
 source-file $HOME/.tmux/sessions/activeavro.conf
+source-file $HOME/.tmux/sessions/saasbuilders.conf
+# source-file $HOME/.tmux/sessions/onner.conf
 
