direnv: Add a custom layout for gb-based Go projects

--- a/.direnvrc
+++ b/.direnvrc
@@ -8,3 +8,18 @@ use_ruby() {
   load_prefix $ruby_dir
   layout ruby
 }
+
+# Usage: layout gb
+#
+# Sets up environment for a Go project using the alternative gb build tool. In
+# addition to project executables on PATH, this includes an exclusive, project-
+# local GOPATH which enables many tools like gocode and oracle to "just work".
+#
+# http://getgb.io/
+# https://github.com/direnv/direnv/pull/188
+#
+layout_gb() {
+  export GOPATH="$PWD/vendor:$PWD"
+  PATH_add "$PWD/vendor/bin"
+  PATH_add bin
+}
