--- a/.pythonrc
+++ b/.pythonrc
@@ -11,7 +11,7 @@
 try:
     import readline
 except ImportError:
-    print "Module readline not available."
+    print("Module readline not available.")
 
 else:
     import atexit
@@ -19,8 +19,8 @@ else:
     import rlcompleter
 
     historyPath = os.path.expanduser("~/.python_history")
-    # bind TAB to completion
-    #readline.parse_and_bind('tab: complete')
+    # bind TAB to completion -- interferes with indenting :-(
+    # readline.parse_and_bind('tab: complete')
 
     def save_history(historyPath=historyPath):
         import readline
